force-app/main/default/objects/Moving_Quote__c/Moving_Quote__c.object-meta.xml
<CustomObject>
    <label>Moving Quote</label>
    <pluralLabel>Moving Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Moving Quote Number</label>
        <type>AutoNumber</type>
        <displayFormat>MQ-{00000}</displayFormat>
    </nameField>
</CustomObject>