force-app/main/default/objects/Moving_Quote__c/fields/Base_Quote__c.field-meta.xml
<CustomField>
    <fullName>Base_Quote__c</fullName>
    <label>Base Quote</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>