force-app/main/default/objects/Moving_Quote__c/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <label>Contact Info</label>
    <type>Email</type>
</CustomField>