force-app/main/default/objects/Moving_Quote__c/fields/Distance_Group__c.field-meta.xml
<CustomField>
    <fullName>Distance_Group__c</fullName>
    <label>Distance Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local (&lt;50 miles)</fullName>
                <default>true</default>
                <label>Local (&lt;50 miles)</label>
            </value>
            <value>
                <fullName>Regional (50-250 miles)</fullName>
            </value>
            <value>
                <fullName>Long Haul (&gt;250 miles)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>