force-app/main/default/objects/Moving_Quote__c/fields/Move_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_Date__c</fullName>
    <label>Preferred Move Date</label>
    <type>Date</type>
</CustomField>