force-app/main/default/objects/Moving_Quote__c/fields/Move_Size__c.field-meta.xml
<CustomField>
    <fullName>Move_Size__c</fullName>
    <label>Move Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Studio/1BR</fullName>
                <label>Studio / 1 BR</label>
            </value>
            <value>
                <fullName>2BR</fullName>
                <default>true</default>
                <label>2 BR</label>
            </value>
            <value>
                <fullName>3BR</fullName>
                <label>3 BR</label>
            </value>
            <value>
                <fullName>4Plus</fullName>
                <label>4+ BR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>