force-app/main/default/objects/Moving_Quote__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Moving Quotes</relationshipLabel>
    <relationshipName>Property_Moving_Quotes</relationshipName>
</CustomField>