force-app/main/default/objects/Moving_Quote__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Packing</fullName>
            </value>
            <value>
                <fullName>Unpacking</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>PianoHandling</fullName>
                <label>Piano Handling</label>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>