force-app/main/default/objects/Moving_Quote__c/fields/Total_With_Services__c.field-meta.xml
<CustomField>
    <fullName>Total_With_Services__c</fullName>
    <label>Total with Services</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>